# template-simple

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  mypy.ini  pyproject.toml
